# dns-blocklist

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  blocklist-sources.json  canary-domains.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate-data-source-notices.py  generate-third-party-notices.sh
src/: binary.rs  config.rs  downloader.rs  lib.rs  main.rs  metadata.rs  parser.rs  reader.rs  trie.rs  validator.rs
tests/: download_integration_test.rs  integration_test.rs  validation_test.rs
tests/common/: binary_reader.rs  mod.rs  test_data.rs
