[package]
name = "dns-blocklist-compiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Compile DNS blocklists into SDBL v3 binary format"
license = "GPL-3.0"

[[bin]]
name = "dns-blocklist-compiler"
path = "src/main.rs"

[dependencies]
ureq = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"

[profile.release]
lto = true
strip = true
